Fix: adjust title underline and meta spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,7 +38,7 @@ body {
       height: 2px;
       position: absolute;
       left: 0;
-      bottom: -12px;
+      bottom: -4px;
       transition: width 0.35s cubic-bezier(0.5, 0, 0.5, 1);
     }
     &:hover {
